# sample-social-intelligence-agents

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  entrypoint.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
architecture/: README.md  architecture-overview.drawio  graph-pattern.drawio  swarm-pattern.drawio
config/: icp_profile.json
demo/: app.py  components.py  config.py  data.py  streaming.py
eval/: golden_set.json
infra/: app.py  cdk.json  gateway_stack.py  requirements.txt  runtime-requirements.txt
infra/lambda/: handler.py
infra/stacks/: social_intelligence_stack.py
scripts/: benchmark.py  eval_quality.py  test_invoke.py
src/social_intelligence/: __init__.py  config.py
src/social_intelligence/agents/: __init__.py  analysis_agent.py  email_generation_agent.py  search_specialist_agent.py  trend_research_agent.py
src/social_intelligence/orchestration/: __init__.py  graph_runner.py  model_retry.py  qualification_gate.py  swarm_runner.py  tool_budget.py
src/social_intelligence/schemas/: __init__.py  models.py  openapi.yaml  tool_schema.json
src/social_intelligence/tools/: __init__.py  _freshness.py  _http.py  _secrets.py  brand_knowledge.py  devto.py  dynamodb_tool.py  email_renderer.py  github.py  grounding_gate.py  hackernews.py  lobsters.py  producthunt.py  reddit.py  registry.py  stackoverflow.py  wikipedia.py  youtube.py
tests/: conftest.py  test_benchmark.py  test_config.py  test_coverage.py  test_coverage_extra.py  test_eval_quality.py  test_hardening.py  test_model_retry.py  test_producthunt.py  test_tool_budget.py  test_tools.py
tests/integration/: test_runtime.py
