[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "social-intelligence-agents"
version = "0.1.0"
description = "Multi-agent social intelligence system built with Strands Agents SDK and Amazon Bedrock AgentCore"
readme = "README.md"
license = "MIT-0"
requires-python = ">=3.12"
dependencies = [
    "strands-agents==1.44.0",
    "bedrock-agentcore[strands-agents]==1.15.0",
    "boto3>=1.42.46",
    "pydantic==2.12.5",
    "httpx==0.28.1",
    "jinja2==3.1.6",
    "mcp-proxy-for-aws==1.6.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.0",
    "pytest-cov==7.1.0",
    "ruff==0.15.17",
]
demo = [
    "streamlit==1.45.0",
    "markupsafe==3.0.3",
    "pillow==11.3.0",
    "python-dotenv==1.2.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/social_intelligence"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]
exclude = ["infra/lambda/.bundle"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "S"]

[tool.ruff.lint.per-file-ignores]
"infra/stacks/*.py" = ["S603", "S607"]  # CDK synth runs pip subprocess with hardcoded args
"tests/**/*.py" = ["S101"]  # assert is fine in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
