[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "social-intelligence-agents"
version = "0.1.0"
description = "Multi-agent social intelligence system built with Strands Agents SDK and Amazon Bedrock AgentCore"
readme = "README.md"
license = "MIT-0"
requires-python = ">=3.14,<3.15"
dependencies = [
    "strands-agents==1.48.0",
    "bedrock-agentcore[strands-agents]==1.18.1",
    "boto3>=1.43.31",
    "pydantic==2.13.4",
    "httpx==0.28.1",
    "jinja2==3.1.6",
    "mcp-proxy-for-aws==1.6.4",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "ruff==0.15.21",
]
infra = [
    "aws-cdk-lib==2.261.0",
    "constructs==10.6.0",
    "cdk-nag==2.38.2",
    "pip>=26.1.2,<27.0",
]
demo = [
    "streamlit==1.54.0",
    "markupsafe==3.0.3",
    "pillow==12.3.0",
    "python-dotenv==1.2.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/social_intelligence"]

[tool.ruff]
target-version = "py314"
line-length = 120
src = ["src"]
exclude = ["infra/lambda/.bundle"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "S"]

[tool.ruff.lint.per-file-ignores]
"infra/stacks/*.py" = ["S603", "S607"]  # CDK synth runs pip subprocess with hardcoded args
"tests/**/*.py" = ["S101"]  # assert is fine in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # Latest upstream SDK releases emit these internal deprecations during import.
    # Keep repository and transitive application warnings visible in CI.
    "ignore:Support for class-based `config` is deprecated, use ConfigDict instead.:pydantic.warnings.PydanticDeprecatedSince20:bedrock_agentcore\\.runtime\\.context",
    "ignore:strands\\.experimental\\.hooks\\.multiagent is deprecated\\. Use strands\\.hooks instead\\.:DeprecationWarning:strands\\.experimental\\.hooks\\.multiagent",
]
